--- a/main.css
+++ b/main.css
@@ -1,5 +1,23 @@
+* {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.none {
+    display: none;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
 body {
-    background-color: #FFE5BA;
+    background-color: bisque;
+}
+
+section {
+    margin-bottom: 20px;
+    border-bottom: 2px solid coral;
 }
 
 .center {
@@ -8,20 +26,48 @@ body {
     margin: auto;
 }
 
-h1 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 2.4rem;
+h2 {
+    text-transform: uppercase;
+    font-size: 1.35rem;
 }
 
 p {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 1.25rem;
 }
 
 a {
     color: coral;
+    text-decoration: none;
+    transition: .05s;
 }
 
 a:hover {
-    color: tomato;
+    color: brown;
+}
+
+footer {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+footer div {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
+
+.git {
+    align-self: center;
+}
+
+.git p {
+    display: flex;
+    margin: 0;
+}
+
+.git a {
+    margin: 0 10px;
+    padding: 0 10px;
+    border-right: 1px solid black;
 }
